--- a/app/Resources/FOSUserBundle/translations/FOSUserBundle.fr.yml
+++ b/app/Resources/FOSUserBundle/translations/FOSUserBundle.fr.yml
@@ -33,8 +33,11 @@ profile:
         send_message: 'Envoyer un message'
         username: 'Nom d''utilisateur'
         email: 'Adresse e-mail'
+        edit: 'Éditer mon profile'
     edit:
         submit: 'Mettre à jour'
+        back: 'Retour au profile'
+        current_password: 'Mot de passe actuel'
     flash:
         updated: 'Le profil a été mis à jour'
 change_password:
