--- a/app/Resources/FOSUserBundle/translations/FOSUserBundle.fr.yml
+++ b/app/Resources/FOSUserBundle/translations/FOSUserBundle.fr.yml
@@ -34,6 +34,7 @@ profile:
         username: 'Nom d''utilisateur'
         email: 'Adresse e-mail'
         edit: 'Éditer mon profile'
+        on: 'Sur'
     edit:
         submit: 'Mettre à jour'
         back: 'Retour au profile'
